2005-12-04  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.12 TAGGED FOR RELEASE ***

	* mac/README: add note that mac classic port is no longer supported.

2005-12-01  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update changes for 8.4.12 release

	* mac/tkMacWm.c:	Restored consistent error checking and
	* macosx/tkMacOSXWm.c:	messages among different platform's
	* tests/wm.test:	[wm grid] commands.  [Bug 1323972].
	* win/tkWinWm.c:

2005-12-01  Kevin Kenny  <kennykb@acm.org>

	* win/makefile.vc: restored buildability.
	
2005-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/menu.tcl (::tk::PostOverPoint): correct menu post near
	bottom of screen on Windows. [Bug 1353416]

2005-12-01  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (Darwin): fixed error when MACOSX_DEPLOYMENT_TARGET unset
	* unix/configure: regen.

	* macosx/tkMacOSXCarbonEvents.c (TkMacOSXInitCarbonEvents): added newly
	registered kEventAppAvailableWindowBoundsChanged to debugging code.

2005-11-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (WmAttributesCmd): set (no)topmost window aspect
	before rewrapping.  [Bug 1086049]

	* generic/tkImgGIF.c: cast calls to block_out

	* win/Makefile.in: place TCL_BIN_DIR first in PATH for targets to
	get Tcl built dll first.

	* tests/scrollbar.test (6.22): fix rounding-error sensitive test

	* tests/textWind.test: use "Courier -12" on all platforms.
	Reduces Windows XP test errors in that file from 9 to 2 (13.2 and
	13.9 still off-by-one pixel).

	* win/tkWinWm.c (UpdateWrapper): Don't install frame menu on dead
	window.  Backport of 1233635

	* generic/tkEvent.c: fix handling of ClientMessage handlers.
	[Bug 1289565 983920]

	* macosx/tkMacOSXEvent.h: define
	kEventAppAvailableWindowBoundsChanged for OS X < 10.3.

2005-11-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/console.tcl (::tk::ConsoleInit): improve work-around to
	avoid '% ' from tclMain.c [Bug 1252259]
