@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkUnixEvent.c,v 1.11.2.3 2004/10/27 00:37:38 davygrvy Exp $
+ * RCS: @(#) $Id: tkUnixEvent.c,v 1.11.2.4 2005/12/05 21:38:48 rmax Exp $
  */
 
 #include "tkInt.h"
@@ -650,10 +650,31 @@ OpenIM(dispPtr)
 {
     unsigned short i;
     XIMStyles *stylePtr;
+    char *modifiers;
 
-    if (XSetLocaleModifiers("") == NULL) {
+    modifiers = XSetLocaleModifiers("");
+    if (modifiers == NULL) {
 	goto error;
     }
+#if 1
+    /* 
+     * This is a temporary hack that can be taken back out again
+     * once Tk has learned how to deal with SCIM
+     */
+    while ((modifiers = strchr(modifiers, '@')) != NULL) {
+	if (strncmp(modifiers, "@im=", 4) == 0) {
+	    /* The first "@im=" entry wins */
+	    const char const *scim = "@im=SCIM";
+	    if (strncmp(modifiers, scim, strlen(scim)) == 0) {
+		/* If it is SCIM, we override it */
+		if (XSetLocaleModifiers("@im=local") == NULL) {
+		    goto error;
+		}
+	    }
+	    break;
+	}
+    }
+#endif
 
     dispPtr->inputMethod = XOpenIM(dispPtr->display, NULL, NULL, NULL);
     if (dispPtr->inputMethod == NULL) {
